# mongo-rust-lambda-demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs
